Fixed AnswerView display overflow and BottomSheet

--- a/src/components/Answer.css
+++ b/src/components/Answer.css
@@ -1,5 +1,7 @@
 .answer-img {
     visibility: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 /* Overrides Viewer.js */
